fix: footer elements alignment

--- a/src/ui/components/templates/Footer/Footer.css
+++ b/src/ui/components/templates/Footer/Footer.css
@@ -4,24 +4,28 @@
   background-color: var(--background-secondary, #fff);
   border-top: 1px solid var(--border-color, #202428);
   color: var(--font-color, #202428);
+  text-align: center;
 
   .footer__content {
     display: flex;
     flex-wrap: wrap;
-    gap: 4rem;
+    flex-direction: column;
+    gap: 2rem;
     max-width: var(--container-max-width, 1200px);
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
     padding-bottom: 3rem;
-    align-items: start;
+    align-items: center;
   }
 
   .footer__section {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
     flex: 1;
     min-width: 200px;
+    justify-content: center;
+    align-items: center;
   }
 
   .footer__section:first-child {
@@ -31,9 +35,10 @@
   .footer__brand {
     font-size: 1.5rem;
     font-weight: 700;
-    font-family: var(--font-secondary);
+    font-family: var(--font-secondary), serif;
     line-height: 1;
-    display: block;
+    display: flex;
+    justify-content: center;
     margin: 0;
   }
 
@@ -48,7 +53,8 @@
     font-size: 1.1rem;
     font-weight: 600;
     line-height: 1;
-    display: block;
+    display: flex;
+    justify-content: center;
     margin: 0;
   }
 
@@ -56,6 +62,20 @@
     display: flex;
     gap: 1rem;
     align-items: center;
+    justify-content: center;
+
+    .styled-link--icon {
+      border: none;
+
+      svg {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+
+      &:hover {
+        border: none;
+      }
+    }
   }
 
   .footer__legal-link {
@@ -84,29 +104,29 @@
   }
 }
 
-@media (max-width: 640px) {
+@media (min-width: 641px) {
   .footer {
-    text-align: center;
+    text-align: left;
 
     .footer__content {
-      flex-direction: column;
-      text-align: center;
-      gap: 2rem;
+      flex-direction: row;
+      text-align: left;
+      gap: 4rem;
+      align-items: start;
     }
 
     .footer__links {
-      justify-content: center;
+      justify-content: flex-start;
     }
 
     .footer__section {
-      align-items: center;
-      gap: 0.5rem;
+      align-items: flex-start;
+      gap: 1rem;
     }
 
     .footer__brand,
     .footer__title {
-      justify-content: center;
-      display: flex;
+      display: block;
     }
   }
 }
